# medfusion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  CURRENT_SESSION_STATE.md  Dockerfile  FINAL_SUMMARY.md  LICENSE  Makefile  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_2026-02-20.md  PROJECT_ANALYSIS_OLD.md  PROJECT_COMPLETE.md  PROJECT_DEEP_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TEST_STATUS.md  VERIFICATION_REPORT.md  WORK_SUMMARY.md  docker-compose.yml  pyproject.toml  sitecustomize.py  start-webui.sh  项目分析总结.md
.github/workflows/: ci.yml  code-quality.yml  deploy-docs.yml  release.yml
benchmarks/: baseline.json
configs/: README.md  default.yaml  generic_multimodal_config.yaml  quickstart.yaml  simulation_test.yaml  smurf_config.yaml  smurf_mil_config.yaml  test_mobilenet.yaml  test_mock.yaml
configs/builder/: README.md  generic_multimodal.yaml
configs/demo/: smurf_lite_mvi.yaml  smurf_lite_mvi_dr_z.yaml  three_phase_ct_mvi_demo.yaml  three_phase_ct_mvi_dr_z.yaml
configs/legacy/: medical_config.yaml
configs/public_datasets/: README.md  breastmnist_quickstart.yaml  pathmnist_quickstart.yaml  uci_heart_disease_quickstart.yaml
configs/starter/: README.md  default.yaml  quickstart.yaml
configs/templates/: README.md  multimodal_fusion.yaml  pathology_classification.yaml  radiology_survival.yaml
configs/testing/: README.md
data/mock/: metadata.csv
demo/: dr_z_mvi_cases.csv
demo/smurf_e2e/: README.md  REQUIREMENTS_OPTIMIZATION.md  (+10 more)
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: .gitignore  ATTENTION_MECHANISM_GUIDE.md  BUG_FIX_SUMMARY.md  BUSINESS_MODEL.md  BUSINESS_MODEL_FINAL.md  CODEBASE_ANALYSIS.md  CODE_CLEANUP_ANALYSIS.md  CODE_CLEANUP_PLAN.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_DOCUMENTATION_ANALYSIS_2026-02-18.md  CONFIG_VALIDATION_SIMPLIFICATION.md  DEVELOPMENT_STRATEGY.md  DOCUMENTATION_STRUCTURE.md  DOCUMENTATION_TIMELINESS_CHECK_2026-02-18.md  DOCUMENTATION_UPDATE_2026-02-18.md  ENHANCED_REPORT_GENERATION.md  FINAL_REPORT_2026-02-20.md  FULL_WORKFLOW_TEST_RESULTS.md  ISSUES_FOUND.md  MULTIVIEW_TYPES_SUMMARY.md  OPTIMIZATION_COMPLETE_2026-02-20.md  OPTIMIZATION_PROGRESS_2026-02-20.md  OPTIMIZATION_REPORT_2026-02-18.md  P0_FIXES_REPORT.md  PHASE2_REPORT_GENERATION.md  PROJECT_ANALYSIS_2026-02-20.md  PROJECT_STATUS.md  PROJECT_SUMMARY_2026-02-18.md  README.md  SIMULATION_TEST_PLAN.md  SIMULATION_TEST_RESULTS.md  TARGET_USERS.md  TEST_COVERAGE_IMPROVEMENT.md  TYPE_ANNOTATION_PLAN.md  WEB_UI_ARCHITECTURE.md  WORKFLOW_DESIGN.md  WORKFLOW_EVALUATION.md  WORKFLOW_OPTIMIZATION.md  architecture_analysis.md  conf.py  (+7 more)
dotconfig/: .editorconfig
examples/: README.md  advanced_attention_demo.py  attention_quick_start.py  attention_supervision_example.py  benchmark_demo.py  cache_demo.py  cache_demo_simple.py  config_validation_demo.py  distributed_training_demo.py  exception_handling_demo.py  gradient_checkpointing_demo.py  hyperparameter_tuning_demo.py  logging_demo.py  model_builder_demo.py  model_compression_demo.py  model_export_demo.py  model_serving_demo.py  smurf_usage.py  train_demo.py
med_core/: __init__.py  cli.py  exceptions.py  output_layout.py  public_datasets.py  stability.py
med_core_rs/: .gitignore  Cargo.toml  QUICKSTART.md  analyze_bottleneck.py  benchmark_3d.py  benchmark_comparison.py  benchmark_standalone.py  build.sh  example_integration.py  integration_example.py  pyproject.toml  summary.sh  test_3d.py  test_mil.py  test_percentile_analysis.py  test_quick.py
med_core_rs/benches/: preprocessing_bench.rs
med_core_rs/benchmarks/: analyze_bottleneck.py  benchmark_standalone.py
med_core_rs/docs/: INDEX.md  PRACTICAL_GUIDE.md  README.md  README_CN.md
med_core_rs/examples/: example_integration.py
med_core_rs/src/: lib.rs  mil.rs  preprocessing.rs  quickselect.rs  volume_3d.rs
med_core_rs/tests/: test_mil.py  test_percentile_analysis.py  test_quick.py
medfusion-web/: API_INTEGRATION_REPORT.md  CLI_GUIDE.md  DATABASE_INTEGRATION.md  DOCUMENTATION_CLEANUP.md  QUICKSTART.md  README.md  WEBSOCKET_INTEGRATION.md  WEBUI_COMPLETION_SUMMARY.md  WEB_UI_GUIDE.md  docker-compose.yml  start-webui.sh  stop-webui.sh  test_backend.py  test_optimizations.py
notebooks/: quickstart.ipynb
presentations/: .gitignore  README.md  package.json  promo-mvp-slides.md  promo-scripts.md  slides.md  style.css  uno.config.ts
scripts/: analyze_coverage.py  build_docs.sh  ci_diagnostic.py  compare_benchmarks.py  full_regression.sh  full_workflow_test.py  generate_mock_data.py  generate_test_stubs.py  inspect_ci_failure.sh  launch_tensorboard.sh  local_ci_test.sh  prepare_public_dataset.py  quick_ci_test.py  quick_simulation_test.py  release_smoke.py  run_benchmarks.py  setup_wandb.sh  simple_test.py  smoke_test.py  test_attention_supervision.py  test_ci_locally.sh  test_enhanced_report.py  test_pluggability.py  verify_ci_fixes.py
src/: __init__.py
test/: smoke.sh
tests/: conftest.py  test_advanced_attention.py  test_advanced_builder_api.py  test_aggregators.py  test_attention_supervision.py  test_attention_supervision_integration.py  test_backbones.py  test_build_results.py  test_cache.py  test_classification.py  test_cli.py  test_comfyui_api.py  test_config_doctor.py  test_config_validation.py  test_configs.py  test_datasets.py  test_doctor_interest_modules.py  test_embedding_backbone.py  test_end_to_end.py  test_evaluation.py  test_evaluation_api.py  test_examples_documentation.py  test_exceptions.py  test_experiments_api.py  test_export.py  test_factory_functions.py  test_factory_functions_extended.py  test_fused_attention.py  test_fusion.py  test_gradient_checkpointing.py  test_heads.py  test_heatmap_visualization.py  test_kronecker.py  test_legacy_training_service.py  test_logging.py  test_market_positioning_docs.py  test_metrics.py  test_mil.py  test_model_artifact_api_contract.py  test_model_builder.py  (+48 more)
web/: .gitignore  CLI_GUIDE.md  QUICKSTART.md  README.md  WEB_UI_GUIDE.md  start.sh  test_backend.py  test_optimizations.py
(+788 files in other folders)
